# anatevka

./: .gitignore  LICENSE.md  Makefile  README.md  anatevka-tests.asd  anatevka.asd
tests/py/: GenerateTestCases.ipynb  README.md  generate_test_cases.py  pyproject.toml
tests/py/cases/10/: 0.1-0.txt  0.1-1.txt  0.1-2.txt  0.1-3.txt  0.1-4.txt  0.1-5.txt  0.1-6.txt  0.1-7.txt  0.1-8.txt  0.1-9.txt  0.2-0.txt  0.2-1.txt  0.2-2.txt  0.2-3.txt  0.2-4.txt  0.2-5.txt  0.2-6.txt  0.2-7.txt  0.2-8.txt  0.2-9.txt  0.4-0.txt  0.4-1.txt  0.4-2.txt  0.4-3.txt  0.4-4.txt  0.4-5.txt  0.4-6.txt  0.4-7.txt  0.4-8.txt  0.4-9.txt
tests/py/cases/15-1/: 0.5-1000.txt  0.5-1001.txt  0.5-1004.txt  0.5-1005.txt  0.5-1007.txt  0.5-1009.txt  0.5-1010.txt  0.5-1013.txt  0.5-1014.txt  0.5-1016.txt  0.5-1017.txt  0.5-1019.txt  0.5-1020.txt  0.5-1021.txt  0.5-1025.txt  0.5-1026.txt  0.5-1027.txt  0.5-1028.txt  0.5-1029.txt  0.5-1030.txt  0.5-1031.txt  0.5-1032.txt  0.5-1034.txt  0.5-1036.txt  0.5-1037.txt  0.5-1038.txt  0.5-1039.txt  0.5-1040.txt  0.5-1041.txt  0.5-1042.txt  0.5-1043.txt  0.5-1044.txt  0.5-1046.txt  0.5-1047.txt  0.5-1049.txt  0.5-1052.txt  0.5-1054.txt  0.5-1055.txt  0.5-1056.txt  0.5-1057.txt  (+644 more)
tests/py/cases/15-2/: 0.5-2000.txt  0.5-2002.txt  0.5-2003.txt  0.5-2004.txt  0.5-2005.txt  0.5-2006.txt  0.5-2007.txt  0.5-2010.txt  0.5-2013.txt  0.5-2016.txt  0.5-2017.txt  0.5-2018.txt  0.5-2020.txt  0.5-2023.txt  0.5-2025.txt  0.5-2026.txt  0.5-2027.txt  0.5-2030.txt  0.5-2031.txt  0.5-2033.txt  0.5-2034.txt  0.5-2036.txt  0.5-2039.txt  0.5-2040.txt  0.5-2041.txt  0.5-2043.txt  (+617 more)
(+8731 files in other folders)
